<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="86dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/rectangle3" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="354dp"
            android:layout_height="59.95dp"
            android:layout_marginTop="44dp"
            android:inputType="text"
            android:hint="Email"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/imageView"
            android:background="@drawable/button2click"/>

        <EditText
            android:id="@+id/editText2"
            android:layout_width="354dp"
            android:layout_height="59.95dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/button2click"
            android:hint="Password"
            android:inputType="text"
            android:paddingStart="20dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.508"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText1"
            android:drawableEnd="@drawable/view"
            android:paddingEnd="10dp"/>


        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="7.05dp"
            android:fontFamily="@font/montserratregular"
            android:text="@string/screen3text1"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.904"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/editText2" />

        <Button
                android:id="@+id/button"
                android:layout_width="354dp"
                android:layout_height="52dp"
                android:layout_marginTop="21dp"
                android:background="@drawable/button1click"
                android:fontFamily="@font/productsansbold"
                android:text="@string/screen2button1"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textView1" />
            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="38dp"
                android:fontFamily="@font/robotoregular"
                android:gravity="center"
                android:text="@string/screen3text2"
                android:textColor="@color/grey"
                android:textSize="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/button" />

        <ImageView
            android:id="@+id/imageView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/textView2"
            app:layout_constraintEnd_toStartOf="@id/textView2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:srcCompat="@drawable/vector1" />

        <ImageView
            android:id="@+id/imageView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@id/textView2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/textView2"
            app:layout_constraintTop_toTopOf="@id/textView2"
            app:srcCompat="@drawable/vector1" />
        <Button
            android:id="@+id/button2"
            android:layout_width="354dp"
            android:layout_height="52dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/style_button_google"
            android:fontFamily="@font/productsansbold"
            android:text="@string/screen3button2"
            android:textAllCaps="false"
            android:textColor="@color/red"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/textView2"
            android:drawable="@drawable/google_icon"
            android:paddingEnd="10dp"/>

        <ImageView
            android:id="@+id/imageView7"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            app:layout_constraintBottom_toBottomOf="@id/button2"

            app:layout_constraintStart_toStartOf="@id/button2"
            app:layout_constraintTop_toTopOf="@id/button2"
            app:srcCompat="@drawable/google_icon" />
        <Button
            android:id="@+id/button3"
            android:layout_width="354dp"
            android:layout_height="52dp"
            android:layout_marginTop="16.05dp"
            android:background="@drawable/style_button_face"
            android:fontFamily="@font/productsansbold"
            android:text="@string/screen3button3"
            android:textAllCaps="false"
            android:textColor="@color/blue"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button2" />
        <ImageView
            android:id="@+id/imageView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            app:layout_constraintBottom_toBottomOf="@id/button3"
            app:layout_constraintStart_toStartOf="@id/button3"
            app:layout_constraintTop_toTopOf="@id/button3"
            app:srcCompat="@drawable/facebooke_icon" />
        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="33.05dp"
            android:paddingBottom="12dp"
            android:fontFamily="@font/montserratregular"
            android:gravity="center"
            android:text="@string/screen3text3"
            android:textColor="@color/black"
            android:textSize="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/button3" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>